--- a/calculator.ejs
+++ b/calculator.ejs
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>Calculator</h1>
-  <h1>The answer is <%=subtract %></h1>
+  <h1>The answer is <%=answer %></h1>
 </body>
 </html>
