recursively remove excessive ejs file.

--- a/views/calculator.ejs
+++ b/views/calculator.ejs
@@ -5,7 +5,6 @@
   <title>Calculator</title>
 </head>
 <body>
-  <h1>Calculator</h1>
-  <h1><%=the answer is %></h1>
+  <h1>The answer is <%= op %></h1>
 </body>
 </html>
